plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/lib-and-app/lib/src/commonMain/kotlin/LibCommonMain.kt
package com.h0tk3y.hmpp.klib.demo

interface <!LINE_MARKER("descr='Is implemented by LibCommonMainExpect [lib-and-app.lib.commonMain] LibCommonMainExpect [lib-and-app.lib.iosMain] LibCommonMainExpect [lib-and-app.lib.jvmAndJsMain]  Click or press ... to navigate'")!>LibCommonMainInterface<!>

expect class <!LINE_MARKER("descr='Has actuals in [lib-and-app.lib.iosMain, lib-and-app.lib.jvmAndJsMain] module'")!>LibCommonMainExpect<!> constructor() : LibCommonMainInterface {
    fun <!LINE_MARKER("descr='Has actuals in [lib-and-app.lib.iosMain, lib-and-app.lib.jvmAndJsMain] module'")!>libCommonMainExpectFun<!>()
}

fun libCommonMainTopLevelFun(): Int {
    println("commonMainTopLevelFun")
    return 0
}

fun main() {
    println(LibCommonMainExpect())
    println(libCommonMainTopLevelFun())
}
